--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
     "bootstrap-social": "^5.1.1",
+    "chart.js": "^3.5.1",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
