remove auth  and deleted unused tables

--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@azure/arm-compute": "^16.5.0",
+    "@azure/arm-resources": "^4.2.2",
+    "@azure/arm-subscriptions": "^3.1.2",
+    "@azure/identity": "^2.0.1",
+    "@azure/ms-rest-nodeauth": "^3.0.0",
+    "@azure/msal-react": "^1.1.1",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -11,7 +17,9 @@
     "bootstrap-social": "^5.1.1",
     "chart.js": "^3.5.1",
     "jquery": "^3.6.0",
+    "msal": "^1.4.15",
     "react": "^17.0.2",
+    "react-aad-msal": "^2.3.5",
     "react-chartjs-2": "^3.2.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
